--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -3,4 +3,5 @@ body{
 }
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }  
